增加sqlite的相关库，可以保存数据到sqlite中

--- a/http/src/ui/setting.html
+++ b/http/src/ui/setting.html
@@ -12,9 +12,9 @@
 
 </head>
 <script src="setting.js"></script>
-<body>
-
-
+<body>设置
+<textarea rows= 10 cols=50 id='info'></textarea>
+<button onclick='setPara()'>写入参数</button>
 </body>
 
 </html>
