--- a/ui-helper/other/action-show.html
+++ b/ui-helper/other/action-show.html
@@ -7,80 +7,91 @@
     <title>DIV Animation</title>
     <style>
         .color-changing-div {
-        border: 1px blue solid;
-        animation: colorShift 18s infinite linear;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    @keyframes colorShift {
-        0% {
-            background-color: #00B7EB;
+            border: 1px blue solid;
+            animation: colorShift 18s infinite linear;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        16.67% {
-            background-color: #C8D7E3;
-        }
-        33.33% {
-            background-color: #7AC142;
-        }
-        50% {
-            background-color: #003366;
-        }
-        66.67% {
-            background-color: #0078D7;
-        }
-        83.33% {
-            background-color: #8E44AD;
-        }
-        100% {
-            background-color: #00B7EB;
-        }
-    }
-    .allContain {
-        width: 800px;
-        border: blue 1px solid;
-        margin: 0px;
-        padding: 2px;
-        text-align: center;
-        border: 1px solid #ccc;
-        position: relative;
-    }
 
-    .container {
-        position: absolute;
-    }
-    .container2 {
-        position: relative;
-        width: 300px;
-        height: 200px;
-        border: 1px solid #ccc;
-        overflow: hidden;
-    }
+        @keyframes colorShift {
+            0% {
+                background-color: #00B7EB;
+            }
 
-    .new-div {
-        position: absolute;
-        width: 200px;
-        height: 30px;
-        background-color: rgba(0, 123, 255, 0.3);
-        color: white;
-        text-align: center;
-        line-height: 30px;
-        opacity: 1;
-    }
-</style>
+            16.67% {
+                background-color: #C8D7E3;
+            }
+
+            33.33% {
+                background-color: #7AC142;
+            }
+
+            50% {
+                background-color: #003366;
+            }
+
+            66.67% {
+                background-color: #0078D7;
+            }
+
+            83.33% {
+                background-color: #8E44AD;
+            }
+
+            100% {
+                background-color: #00B7EB;
+            }
+        }
+
+        .allContain {
+            width: 800px;
+            border: blue 1px solid;
+            margin: 0px;
+            padding: 2px;
+            text-align: center;
+            border: 1px solid #ccc;
+            position: relative;
+        }
+
+        .container {
+            position: absolute;
+        }
+
+        .container2 {
+            position: relative;
+            width: 800px;
+            height: 200px;
+            border: 1px solid #ccc;
+            overflow: hidden;
+        }
+
+        .new-div {
+            position: absolute;
+            background-color: rgba(0, 123, 255, 0.3);
+            color: white;
+            text-align: center;
+            line-height: 30px;
+            opacity: 1;
+        }
+    </style>
 </head>
+
 <body>
     <div class="container2" id="container"></div>
 
-    <div style="background-color: aliceblue;border: 1px red solid;" id="bgDiv">
+    <div style="background-color: aliceblue;border: 1px red solid;display: inline-block;" id="bgDiv">
         位置显示 <div style="float: right;">关闭</div>
         <div class="allContain" id="mainContain">
         </div>
     </div>
-    <script>
-        // { "Left": -2880, "Top": 0, "Right": -1440, "Bottom": 900 } 
-        // { "Left": -2880, "Top": 0, "Right": -960, "Bottom": 1200 }
-        let monitorInfo = [ { "Left": -2880, "Top": 0, "Right": 0, "Bottom": 1800 } ,  { "Left": 0, "Top": 0, "Right": 2560, "Bottom": 1440 }]
+
+</body>
+<script>
+    // { "Left": -2880, "Top": 0, "Right": -1440, "Bottom": 900 } 
+    // { "Left": -2880, "Top": 0, "Right": -960, "Bottom": 1200 }
+    let monitorInfo = [{ "Left": -2880, "Top": 0, "Right": -1440, "Bottom": 900 }, { "Left": 0, "Top": 0, "Right": 2560, "Bottom": 1440 }]
+    let newMonitor = [] // 转换后的监视器信息
     // 创建一个窗口显示 Div
     let winOpt = {
         guiWidth: 240,
@@ -114,123 +125,146 @@
         activeAppShow: 0, // 是否显示进程名
         ctrlState: 1,  // 是否显示控制键
     }
-        function createAnimatedDivs(containerId, direction) {
-            const container = document.getElementById(containerId);
-            // 创建前先清空DIV
-            container.innerHTML = ''
+    let globalScale = 1;
+    function createAnimatedDivs() {
+        let textArr = ['k e y', 'p r e s×2', 't e s t', '🖱️×3 ^+v', '⇧+c ␣×12', '⊞+d', 'Caps', 'Del×4'];
+        textArr = textArr.map(x => {
+            return x.replace(/ /g, winOpt.txtSplit);
+        })
+        // 创建前先清空DIV
+        container.innerHTML = ''
+        textArr.forEach((text, i) => {
+            // 间隔多少秒产生新的
+            setTimeout(() => {
+                createNewTxt(text)
+            }, winOpt.guiInterval * i);
+        })
+    }
+    function createNewTxt(text, scale) {
+        const newDiv = document.createElement('div');
+        newDiv.classList.add('new-div');
+        // 需要根据参数创建 guiWidth: 240, guiHeigth: 0, guiBgcolor: "8611AA", guiBgTrans: 0, guiTrans: 1, guiOpacity: 38, guiTextFont: "Verdana", guiTextSize: 26, guiTextWeight: "bold", guiTextColor: "FFEE00",
+        newDiv.textContent = text;
+        newDiv.style.width = winOpt.guiWidth * scale + 'px';
+        if (winOpt.guiHeigth != 0) {
+            newDiv.style.height = winOpt.guiHeigth * scale + 'px';
+        }
+        newDiv.style.backgroundColor = '#' + winOpt.guiBgcolor
+        newDiv.style.opacity = winOpt.guiOpacity / 100
+        newDiv.style.fontSize = winOpt.guiTextSize * scale + 'px';
+        newDiv.style.fontFamily = winOpt.guiTextFont
+        newDiv.style.lineHeight = winOpt.guiTextSize * scale + 'px';
+        newDiv.style.fontWeight = winOpt.guiTextWeight
+        newDiv.style.color = '#' + winOpt.guiTextColor
 
-            setInterval(() => {
-                const newDiv = document.createElement('div');
-                newDiv.classList.add('new-div');
+        // 方向根据 guiPos 和 guiPosXY 决定 guiPosOffsetX: 0, guiPosOffsetY: -50,
+        // 默认 TL
+        let guiX = winOpt.guiPosOffsetX
+        let guiY = winOpt.guiPosOffsetY
+        let editHeight = getComputedStyle(newDiv).height
+        monitorIndex = winOpt.guiMonitorNum
+        if (monitorIndex > newMonitor.length || monitorIndex == 0) {
+            monitorIndex = 1
+        }
+        let width = newMonitor[monitorIndex].Width
+        let height = newMonitor[monitorIndex].Height
+        // 此处坐标需要转换为不同屏幕的，每个屏幕默认起始点为 0 0
+        switch (winOpt.guiPos) {
+            case 'TR':
+                guiX = guiX + width - winOpt.guiWidth
+                break;
+            case 'BL':
+                guiY = guiY + height - editHeight
+                break;
+            case 'BR':
+                guiX = guiX + width - winOpt.guiWidth
+                guiY = guiY + height - editHeight
+                break;
+        }
+        newDiv.style.top = guiX * scale + 'px'
+        newDiv.style.left = guiY * scale + 'px'
+        objContainer.appendChild(newDiv);
+        const existingDivs = []; //objContainer.querySelectorAll('.new-div');
+        existingDivs.forEach(div => {
+            if (div !== newDiv) {
+                let prePos = 0, selfSize = 0, offset = winOpt.guiMargin;
                 switch (direction) {
                     case 'up':
-                        newDiv.style.bottom = '0px';
+                        prePos = parseInt(getComputedStyle(div).bottom) || 0;
+                        selfSize = parseInt(getComputedStyle(div).height)
+                        div.style.bottom = (prePos + offset + selfSize) + 'px';
                         break;
                     case 'down':
-                        newDiv.style.top = '0px';
+                        prePos = parseInt(getComputedStyle(div).top) || 0;
+                        selfSize = parseInt(getComputedStyle(div).height)
+                        div.style.top = (prePos + offset + selfSize) + 'px';
                         break;
                     case 'left':
-                        newDiv.style.right = '0px';
+                        prePos = parseInt(getComputedStyle(div).right) || 0;
+                        selfSize = parseInt(getComputedStyle(div).width)
+                        div.style.right = (prePos + offset + selfSize) + 'px';
                         break;
                     case 'right':
-                        newDiv.style.left = '0px';
+                        prePos = parseInt(getComputedStyle(div).left) || 0;
+                        selfSize = parseInt(getComputedStyle(div).width)
+                        div.style.left = (prePos + offset + selfSize) + 'px';
                         break;
                 }
-                newDiv.textContent = `New Key - ${new Date().toLocaleTimeString()}`;
-                container.appendChild(newDiv);
-
-                const existingDivs = container.querySelectorAll('.new-div');
-                existingDivs.forEach(div => {
-                    if (div !== newDiv) {
-                        let prePos = 0,selfSize = 0,offset = 10;
-                        switch (direction) {
-                            case 'up':
-                                prePos = parseInt(getComputedStyle(div).bottom) || 0;
-                                selfSize = parseInt(getComputedStyle(div).height)
-                                div.style.bottom = (prePos + offset + selfSize) + 'px';
-                                break;
-                            case 'down':
-                                prePos = parseInt(getComputedStyle(div).top) || 0;
-                                selfSize = parseInt(getComputedStyle(div).height)
-                                div.style.top = (prePos + offset + selfSize) + 'px';
-                                break;
-                            case 'left':
-                                prePos = parseInt(getComputedStyle(div).right) || 0;
-                                selfSize = parseInt(getComputedStyle(div).width)
-                                div.style.right = (prePos + offset + selfSize) + 'px';
-                                break;
-                            case 'right':
-                                prePos = parseInt(getComputedStyle(div).left) || 0;
-                                selfSize = parseInt(getComputedStyle(div).width)
-                                div.style.left = (prePos + offset + selfSize) + 'px';
-                                break;
-                        }
-                    }
-                });
-
-                setTimeout(() => {
-                    //newDiv.classList.add('hidden');
-                    container.removeChild(newDiv);
-                }, 5000);
-            }, 2000);
-        }
-        // 要取最大范围，转换 monitorInfo 的负数位置
-        // 
-        function getOffset(demoWidth){
-            let maxInfo = { "Left": 0, "Top": 0, "Right": 0, "Bottom": 0 }  // 最小的 Left Top ，最大的 Right Bottom
-            monitorInfo.forEach(x=>{
-                maxInfo.Left = Math.min(x.Left,maxInfo.Left)
-                maxInfo.Top = Math.min(x.Top,maxInfo.Top)
-                maxInfo.Right = Math.max(x.Right,maxInfo.Right)
-                maxInfo.Bottom = Math.max(x.Bottom,maxInfo.Bottom)
-            })
-            // 坐标全部变成正数
-            let offsetX = 0, offsetY =0
-            if(maxInfo.Left<0){
-                offsetX = - maxInfo.Left
             }
-            if(maxInfo.Right<0){
-                offsetY = - maxInfo.Right
-            }
-            let scale = demoWidth / (maxInfo.Right - maxInfo.Left)
-            console.log('scale',maxInfo.Bottom - maxInfo.Top)
-            let height = parseInt(scale*(maxInfo.Bottom - maxInfo.Top))
-            // 需要根据最大最小计算缩放比，根据宽度计算缩放比，demoWidth
-            return {offsetX,offsetY,scale,height}
+        });
+        // 超时后清理掉
+        setTimeout(() => {
+            //newDiv.classList.add('hidden');
+            objContainer.removeChild(newDiv);
+        }, winOpt.guiLife);
+    }
+
+    // 要取最大范围，转换 monitorInfo 的负数位置
+    function getOffset(demoWidth) {
+        let maxInfo = { "Left": 0, "Top": 0, "Right": 0, "Bottom": 0 }  // 最小的 Left Top ，最大的 Right Bottom
+        monitorInfo.forEach(x => {
+            maxInfo.Left = Math.min(x.Left, maxInfo.Left)
+            maxInfo.Top = Math.min(x.Top, maxInfo.Top)
+            maxInfo.Right = Math.max(x.Right, maxInfo.Right)
+            maxInfo.Bottom = Math.max(x.Bottom, maxInfo.Bottom)
+        })
+        // 坐标全部变成正数
+        let offsetX = 0, offsetY = 0
+        if (maxInfo.Left < 0) {
+            offsetX = - maxInfo.Left
         }
-        function getNewInfo()
-        {
-            let {offsetX,offsetY} = getOffset(400)
-            // 计算偏移，修改为 Width 或 Height
-            let newMonitro = monitorInfo.map(x=>{
-                return {"Left": x.Left + offsetX, "Top":  x.Top + offsetY, "Width": x.Right-x.Left, "Height": x.Bottom-x.Top }
-            })
-            console.log(JSON.stringify(newMonitro))
+        if (maxInfo.Right < 0) {
+            offsetY = - maxInfo.Right
         }
-        // getNewInfo()
-        function initContain(){
-            // 800的宽度
-            let {offsetX,offsetY,scale,height} = getOffset(800)
-            let newMonitro = monitorInfo.map(x=>{
-                return {"Left": x.Left + offsetX, "Top":  x.Top + offsetY, "Width": x.Right-x.Left, "Height": x.Bottom-x.Top }
-            })
-            console.log('newMonitro:',JSON.stringify(newMonitro))
-            let main = document.getElementById("mainContain")
-            main.style.height = height +'px'
-            let arrHTML = newMonitro.map((x,i)=>{
-                let screenHTML = `<div style="top:${x.Top*scale}px;left:${x.Left*scale}px;" class="container">
-                <div id="monitorId${i+1}" style="width:${x.Width*scale}px;height:${x.Height*scale}px;" class="color-changing-div">
-                    <button onclick="fullScreen(${i+1})">全屏${i+1}</button>
-                </div>
-            </div>`
+        let scale = demoWidth / (maxInfo.Right - maxInfo.Left)
+        console.log('scale', maxInfo.Bottom - maxInfo.Top)
+        let height = parseInt(scale * (maxInfo.Bottom - maxInfo.Top))
+        // 需要根据最大最小计算缩放比，根据宽度计算缩放比，demoWidth
+        return { offsetX, offsetY, scale, height }
+    }
+    // getNewInfo()
+    function initContain() {
+        // 800的宽度
+        let { offsetX, offsetY, scale, height } = getOffset(800)
+        // 计算偏移，修改为 Width 或 Height
+        newMonitor = monitorInfo.map(x => {
+            return { "Left": x.Left + offsetX, "Top": x.Top + offsetY, "Width": x.Right - x.Left, "Height": x.Bottom - x.Top }
+        })
+        console.log('newMonitor:', JSON.stringify(newMonitor))
+        let main = document.getElementById("mainContain")
+        main.style.height = height + 'px'
+        let arrHTML = newMonitor.map((x, i) => {
+            let screenHTML = `<div style="top:${x.Top * scale}px;left:${x.Left * scale}px;" class="container">
+            <div id="monitorId${i + 1}" style="width:${x.Width * scale}px;height:${x.Height * scale}px;" class="color-changing-div">
+                <button onclick="fullScreen(${i + 1})">全屏${i + 1}</button>
+            </div>
+        </div>`
             return screenHTML
-            })
-            main.innerHTML = arrHTML.join('')
-        }
-        initContain()
-        // 调用函数，传入容器 ID 和移动方向
-        // createAnimatedDivs('container', 'right');
-         // 全屏代码
+        })
+        main.innerHTML = arrHTML.join('')
+        globalScale = scale
+    }
+    // 全屏代码
     function fullScreen(id) {
         const myDiv = document.getElementById('monitorId' + id);
         toggleFullscreen(myDiv)
@@ -260,8 +294,6 @@
 
         }
     }
-
-
     document.addEventListener('fullscreenchange', function () {
         console.log(document.fullscreenElement)
     });
@@ -269,7 +301,11 @@
     document.addEventListener('fullscreenerror', function () {
         console.error('全屏操作出错');
     });
-    </script>
-</body>
+    // 初始化容器
+    initContain()
+    let objContainer = document.getElementById('container'); // 容器显示
+    // 调用函数，传入容器 ID 和移动方向
+    setInterval(() => { if (objContainer.innerHTML.trim() == '') { createAnimatedDivs(); } }, 1000)
+</script>
 
 </html>
